# heterogeneous-cores-scheduling

./: CMakeLists.txt  main.cpp
src/: FixAndOptimize.cpp  FixAndOptimize.h  MetaHeuristic.cpp  MetaHeuristic.h  Model.cpp  Model.h  Scheduler.cpp  Scheduler.h  Task.cpp  Task.h
